--- a/FakeNews.ipynb
+++ b/FakeNews.ipynb
@@ -109,6 +109,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['su']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.tokenize('su')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TRAIN_CSV_PATH = '../input/train.csv'\n",
+    "TEST_CSV_PATH = '../input/test.csv'\n",
+    "TOKENIZED_TRAIN_CSV_PATH = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
