--- a/Quora_Insincere_Questions_Classification/bert-classification.ipynb
+++ b/Quora_Insincere_Questions_Classification/bert-classification.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "_uuid": "b4a8b81c1fb8b5fae20945a56fda981550c54342"
    },
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "_uuid": "0f47047973d523029fbe9c355577133c4656ce57"
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "_uuid": "3a2a0d12de6ecb82812a36549ea910b5a55c0c4a"
    },
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -268,11 +268,18 @@
       "events.out.tfevents.1552492994.TestPri2\r\n",
       "events.out.tfevents.1552506308.TestPri2\r\n",
       "events.out.tfevents.1552509591.TestPri2\r\n",
+      "events.out.tfevents.1552515231.TestPri2\r\n",
       "graph.pbtxt\r\n",
       "graph.pbtxt.tmp7905681f66134ab8aef12e8b07bddc9f\r\n",
+      "model.ckpt-16000.data-00000-of-00001\r\n",
+      "model.ckpt-16000.index\r\n",
+      "model.ckpt-16000.meta\r\n",
       "model.ckpt-2000.data-00000-of-00001\r\n",
       "model.ckpt-2000.index\r\n",
       "model.ckpt-2000.meta\r\n",
+      "model.ckpt-26000.data-00000-of-00001\r\n",
+      "model.ckpt-26000.index\r\n",
+      "model.ckpt-26000.meta\r\n",
       "model.ckpt-4000.data-00000-of-00001\r\n",
       "model.ckpt-4000.index\r\n",
       "model.ckpt-4000.meta\r\n",
@@ -289,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "_uuid": "b8804d16e48636d8a5c1474c4384076b16c73adc"
    },
@@ -298,14 +305,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:Estimator's model_fn (<function model_fn_builder.<locals>.model_fn at 0x7f386c7be730>) includes params argument, but params are not passed to Estimator.\n",
+      "WARNING:tensorflow:Estimator's model_fn (<function model_fn_builder.<locals>.model_fn at 0x7ff6f90f4b70>) includes params argument, but params are not passed to Estimator.\n",
       "INFO:tensorflow:Using config: {'_model_dir': 'model_repo/outputs', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': 10000, '_save_checkpoints_secs': None, '_session_config': allow_soft_placement: true\n",
       "graph_options {\n",
       "  rewrite_options {\n",
       "    meta_optimizer_iterations: ONE\n",
       "  }\n",
       "}\n",
-      ", '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': None, '_train_distribute': None, '_device_fn': None, '_protocol': None, '_eval_distribute': None, '_experimental_distribute': None, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x7f377d0b9cf8>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': '', '_evaluation_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1, '_tpu_config': TPUConfig(iterations_per_loop=1000, num_shards=8, num_cores_per_replica=None, per_host_input_for_training=3, tpu_job_name=None, initial_infeed_sleep_secs=None, input_partition_dims=None), '_cluster': None}\n",
+      ", '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': None, '_train_distribute': None, '_device_fn': None, '_protocol': None, '_eval_distribute': None, '_experimental_distribute': None, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x7ff6e33fd0f0>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': '', '_evaluation_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1, '_tpu_config': TPUConfig(iterations_per_loop=1000, num_shards=8, num_cores_per_replica=None, per_host_input_for_training=3, tpu_job_name=None, initial_infeed_sleep_secs=None, input_partition_dims=None), '_cluster': None}\n",
       "INFO:tensorflow:_TPUContext: eval_on_tpu True\n",
       "WARNING:tensorflow:eval_on_tpu ignored because use_tpu is False.\n"
      ]
@@ -885,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "_uuid": "58fb06968c09872ccd74b44e07b4a6e932beb6df",
     "scrolled": true
@@ -949,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "_uuid": "20a827baca921e1b48ac3de20422e6d384e2e450"
    },
@@ -1027,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "_uuid": "ee2e686b144528d8eb5a2c50f98c52816a14c657"
    },
@@ -1277,7 +1284,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "15329it [06:06, 51.51it/s]"
+      "130593it [46:06, 54.29it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:prediction_loop marked as finished\n",
+      "INFO:tensorflow:prediction_loop marked as finished\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "130613it [46:06, 47.21it/s]\n",
+      "100%|██████████| 130613/130613 [00:00<00:00, 2039972.85it/s]\n"
      ]
     }
    ],
@@ -1298,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "_uuid": "4acc876dc974dd4d93525e3b163859ddfda33b2d"
    },
@@ -1308,7 +1331,7 @@
      "output_type": "stream",
      "text": [
       "0.96\n",
-      "0.68636\n"
+      "0.70240\n"
      ]
     }
    ],
@@ -1349,23 +1372,14 @@
     "_uuid": "ce1d0b361bfcaf9d58334b0f8facce9944ceadff"
    },
    "source": [
-    "I've run a test with 30% of Quora data on free colab cloud TPU and achieved f1 score of 0.684.(11th place at the moment)\n",
+    "We've run a test with 30% of Quora data on Standard NC6 (6 vcpus, 56 GB memory) and achieved f1 score of 0.684.(11th place at the moment)\n",
     "\n",
-    "**You can't use BERT in the competition, the notebook will fail when it comes to real testing.\n",
-    "I apologies for littering the leaderboard, but I couldn't believe that local test where so high, I had to check.**\n",
+    "**You can't use BERT in the competition, the notebook will fail when it comes to real testing.**\n",
     "\n",
-    "Training took about 30-40 minutes.\n",
+    "Training took about 12 hours.\n",
     "Results are really amazing, espetially because it's a raw model on random 30% sample with no optimization or ensamble, using the simlest of 3 released models.\n",
-    "I didn't even have to preprocess anything, model does it for you.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "_uuid": "f876fa03d1b5b811c5fb3a531dad2cfb6d61031c"
-   },
-   "source": [
-    "<img src=\"https://image.ibb.co/gGCZ0A/image.jpg\" alt=\"image\" border=\"0\">"
+    "\n",
+    "We didn't even have to preprocess anything, model does it for you.\n"
    ]
   }
  ],
@@ -1374,6 +1388,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   },
   "varInspector": {
    "cols": {
