--- a/Toxic_Comment_Classification_Challenge/toxic-bert-multilabel-classification.ipynb
+++ b/Toxic_Comment_Classification_Challenge/toxic-bert-multilabel-classification.ipynb
@@ -54,16 +54,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-03-13 23:44:09--  https://storage.googleapis.com/bert_models/2018_10_18/uncased_L-12_H-768_A-12.zip\n",
-      "Resolving storage.googleapis.com (storage.googleapis.com)... 216.58.206.240, 2a00:1450:4007:817::2010\n",
-      "Connecting to storage.googleapis.com (storage.googleapis.com)|216.58.206.240|:443... connected.\n",
+      "--2019-03-14 15:27:03--  https://storage.googleapis.com/bert_models/2018_10_18/uncased_L-12_H-768_A-12.zip\n",
+      "Resolving storage.googleapis.com (storage.googleapis.com)... 74.125.193.128, 2a00:1450:400b:c01::80\n",
+      "Connecting to storage.googleapis.com (storage.googleapis.com)|74.125.193.128|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 407727028 (389M) [application/zip]\n",
       "Saving to: ‘uncased_L-12_H-768_A-12.zip’\n",
       "\n",
-      "uncased_L-12_H-768_ 100%[===================>] 388,84M   366KB/s    in 13m 24s \n",
+      "uncased_L-12_H-768_ 100%[===================>] 388.84M   197MB/s    in 2.0s    \n",
       "\n",
-      "2019-03-13 23:57:34 (495 KB/s) - ‘uncased_L-12_H-768_A-12.zip’ saved [407727028/407727028]\n",
+      "2019-03-14 15:27:05 (197 MB/s) - ‘uncased_L-12_H-768_A-12.zip’ saved [407727028/407727028]\n",
       "\n"
      ]
     }
@@ -75,18 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "repo = 'model_repo'\n",
+    "\n",
     "with zipfile.ZipFile(\"uncased_L-12_H-768_A-12.zip\",\"r\") as zip_ref:\n",
     "    zip_ref.extractall(repo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,11 +118,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH=Path('../data/')\n",
+    "DATA_PATH=Path('data/')\n",
     "DATA_PATH.mkdir(exist_ok=True)\n",
     "\n",
     "PATH=Path(repo)\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
       "  \"vocab_size\": 30522\n",
       "}\n",
       "\n",
-      "Converting TensorFlow checkpoint from /home/matheus/X/3A/3A-P2/MAP583-Apprentissage_profond/bert-applications/Toxic_Comment_Classification_Challenge/bert-multilabel-classification/model_repo/uncased_L-12_H-768_A-12/bert_model.ckpt\n",
+      "Converting TensorFlow checkpoint from /home/Matheus/bert-applications/Toxic_Comment_Classification_Challenge/model_repo/uncased_L-12_H-768_A-12/bert_model.ckpt\n",
       "Loading TF weight bert/embeddings/LayerNorm/beta with shape [768]\n",
       "Loading TF weight bert/embeddings/LayerNorm/gamma with shape [768]\n",
       "Loading TF weight bert/embeddings/position_embeddings with shape [512, 768]\n",
@@ -293,17 +293,17 @@
       "Loading TF weight bert/encoder/layer_3/attention/output/dense/bias with shape [768]\n",
       "Loading TF weight bert/encoder/layer_3/attention/output/dense/kernel with shape [768, 768]\n",
       "Loading TF weight bert/encoder/layer_3/attention/self/key/bias with shape [768]\n",
-      "Loading TF weight bert/encoder/layer_3/attention/self/key/kernel with shape [768, 768]\n"
+      "Loading TF weight bert/encoder/layer_3/attention/self/key/kernel with shape [768, 768]\n",
+      "Loading TF weight bert/encoder/layer_3/attention/self/query/bias with shape [768]\n",
+      "Loading TF weight bert/encoder/layer_3/attention/self/query/kernel with shape [768, 768]\n",
+      "Loading TF weight bert/encoder/layer_3/attention/self/value/bias with shape [768]\n",
+      "Loading TF weight bert/encoder/layer_3/attention/self/value/kernel with shape [768, 768]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading TF weight bert/encoder/layer_3/attention/self/query/bias with shape [768]\n",
-      "Loading TF weight bert/encoder/layer_3/attention/self/query/kernel with shape [768, 768]\n",
-      "Loading TF weight bert/encoder/layer_3/attention/self/value/bias with shape [768]\n",
-      "Loading TF weight bert/encoder/layer_3/attention/self/value/kernel with shape [768, 768]\n",
       "Loading TF weight bert/encoder/layer_3/intermediate/dense/bias with shape [3072]\n",
       "Loading TF weight bert/encoder/layer_3/intermediate/dense/kernel with shape [768, 3072]\n",
       "Loading TF weight bert/encoder/layer_3/output/LayerNorm/beta with shape [768]\n",
@@ -401,17 +401,17 @@
       "Loading TF weight bert/encoder/layer_9/attention/self/value/bias with shape [768]\n",
       "Loading TF weight bert/encoder/layer_9/attention/self/value/kernel with shape [768, 768]\n",
       "Loading TF weight bert/encoder/layer_9/intermediate/dense/bias with shape [3072]\n",
-      "Loading TF weight bert/encoder/layer_9/intermediate/dense/kernel with shape [768, 3072]\n",
-      "Loading TF weight bert/encoder/layer_9/output/LayerNorm/beta with shape [768]\n",
-      "Loading TF weight bert/encoder/layer_9/output/LayerNorm/gamma with shape [768]\n",
-      "Loading TF weight bert/encoder/layer_9/output/dense/bias with shape [768]\n",
-      "Loading TF weight bert/encoder/layer_9/output/dense/kernel with shape [3072, 768]\n"
+      "Loading TF weight bert/encoder/layer_9/intermediate/dense/kernel with shape [768, 3072]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Loading TF weight bert/encoder/layer_9/output/LayerNorm/beta with shape [768]\n",
+      "Loading TF weight bert/encoder/layer_9/output/LayerNorm/gamma with shape [768]\n",
+      "Loading TF weight bert/encoder/layer_9/output/dense/bias with shape [768]\n",
+      "Loading TF weight bert/encoder/layer_9/output/dense/kernel with shape [3072, 768]\n",
       "Loading TF weight bert/pooler/dense/bias with shape [768]\n",
       "Loading TF weight bert/pooler/dense/kernel with shape [768, 768]\n",
       "Loading TF weight cls/predictions/output_bias with shape [30522]\n",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,14 +1055,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "03/14/2019 10:53:08 - INFO - __main__ -   device: cpu n_gpu: 0, distributed training: False, 16-bits training: False\n"
+      "03/14/2019 21:20:51 - INFO - __main__ -   device: cuda n_gpu: 1, distributed training: False, 16-bits training: False\n"
      ]
     }
    ],
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1143,13 +1143,30 @@
        "['toxic', 'severe_toxic', 'obscene', 'threat', 'insult', 'identity_hate']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "label_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "03/14/2019 21:21:00 - INFO - pytorch_pretrained_bert.tokenization -   loading vocabulary file model_repo/uncased_L-12_H-768_A-12/vocab.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "tokenizer = BertTokenizer.from_pretrained(args['bert_model'], do_lower_case=args['do_lower_case'])"
    ]
   },
   {
@@ -1161,24 +1178,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "03/14/2019 10:53:17 - INFO - pytorch_pretrained_bert.tokenization -   loading vocabulary file model_repo/uncased_L-12_H-768_A-12/vocab.txt\n"
-     ]
-    }
-   ],
-   "source": [
-    "tokenizer = BertTokenizer.from_pretrained(args['bert_model'], do_lower_case=args['do_lower_case'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "03/14/2019 13:50:04 - INFO - __main__ -   LOOKING AT ../data/train.csv\n"
+      "03/14/2019 21:21:01 - INFO - __main__ -   LOOKING AT data/train.csv\n"
      ]
     }
    ],
@@ -1195,15 +1195,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "03/14/2019 10:53:23 - INFO - pytorch_pretrained_bert.modeling -   loading archive file model_repo/uncased_L-12_H-768_A-12 from cache at model_repo/uncased_L-12_H-768_A-12\n",
-      "03/14/2019 10:53:23 - INFO - pytorch_pretrained_bert.modeling -   Model config {\n",
+      "03/14/2019 21:21:10 - INFO - pytorch_pretrained_bert.modeling -   loading archive file model_repo/uncased_L-12_H-768_A-12 from cache at model_repo/uncased_L-12_H-768_A-12\n",
+      "03/14/2019 21:21:10 - INFO - pytorch_pretrained_bert.modeling -   Model config {\n",
       "  \"attention_probs_dropout_prob\": 0.1,\n",
       "  \"hidden_act\": \"gelu\",\n",
       "  \"hidden_dropout_prob\": 0.1,\n",
@@ -1217,8 +1217,8 @@
       "  \"vocab_size\": 30522\n",
       "}\n",
       "\n",
-      "03/14/2019 10:53:39 - INFO - pytorch_pretrained_bert.modeling -   Weights of BertForMultiLabelSequenceClassification not initialized from pretrained model: ['classifier.weight', 'classifier.bias']\n",
-      "03/14/2019 10:53:39 - INFO - pytorch_pretrained_bert.modeling -   Weights from pretrained model not used in BertForMultiLabelSequenceClassification: ['cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.seq_relationship.weight', 'cls.seq_relationship.bias']\n"
+      "03/14/2019 21:21:13 - INFO - pytorch_pretrained_bert.modeling -   Weights of BertForMultiLabelSequenceClassification not initialized from pretrained model: ['classifier.weight', 'classifier.bias']\n",
+      "03/14/2019 21:21:13 - INFO - pytorch_pretrained_bert.modeling -   Weights from pretrained model not used in BertForMultiLabelSequenceClassification: ['cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.decoder.weight', 'cls.seq_relationship.weight', 'cls.seq_relationship.bias']\n"
      ]
     }
    ],
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1568,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1578,17 +1578,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "03/14/2019 13:50:39 - INFO - __main__ -   ***** Running training *****\n",
-      "03/14/2019 13:50:39 - INFO - __main__ -     Num examples = 200\n",
-      "03/14/2019 13:50:39 - INFO - __main__ -     Batch size = 32\n",
-      "03/14/2019 13:50:39 - INFO - __main__ -     Num steps = 25\n"
+      "03/14/2019 21:21:47 - INFO - __main__ -   ***** Running training *****\n",
+      "03/14/2019 21:21:47 - INFO - __main__ -     Num examples = 200\n",
+      "03/14/2019 21:21:47 - INFO - __main__ -     Batch size = 32\n",
+      "03/14/2019 21:21:47 - INFO - __main__ -     Num steps = 18\n"
      ]
     }
    ],
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1627,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1673,12 +1673,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'BertForMultiLabelSequenceClassification' object has no attribute 'module'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-083e2dba7f15>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Freeze BERT layers for 1 epoch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodule\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfreeze_bert_encoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/miniconda3/envs/env_tf_gpu/lib/python3.6/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    533\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mmodules\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    534\u001b[0m         raise AttributeError(\"'{}' object has no attribute '{}'\".format(\n\u001b[0;32m--> 535\u001b[0;31m             type(self).__name__, name))\n\u001b[0m\u001b[1;32m    536\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    537\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'BertForMultiLabelSequenceClassification' object has no attribute 'module'"
+     ]
+    }
+   ],
    "source": [
     "# Freeze BERT layers for 1 epoch\n",
-    "# model.module.freeze_bert_encoder()"
+    "model.module.freeze_bert_encoder()"
    ]
   },
   {
@@ -1692,9 +1705,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'BertForMultiLabelSequenceClassification' object has no attribute 'module'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-30-e5502767395c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodule\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munfreeze_bert_encoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/miniconda3/envs/env_tf_gpu/lib/python3.6/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    533\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mmodules\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    534\u001b[0m         raise AttributeError(\"'{}' object has no attribute '{}'\".format(\n\u001b[0;32m--> 535\u001b[0;31m             type(self).__name__, name))\n\u001b[0m\u001b[1;32m    536\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    537\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'BertForMultiLabelSequenceClassification' object has no attribute 'module'"
+     ]
+    }
+   ],
    "source": [
     "model.module.unfreeze_bert_encoder()"
    ]
@@ -1866,7 +1892,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   },
   "varInspector": {
    "cols": {
